--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,6 +7,8 @@
 		"allowSyntheticDefaultImports": true
 	},
 	"include": [
-		"vite.config.ts"
+		"vite.config.ts",
+		"./config/vite.config.base.ts",
+		"./config/vite.config.prod.ts",
 	]
 }
