--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"axios": "^1.4.0",
 		"vue": "^3.2.47",
 		"vue-router": "^4.1.6"
 	},
 	"devDependencies": {
+		"@types/node": "^18.16.3",
 		"@vitejs/plugin-vue": "^4.1.0",
 		"typescript": "^5.0.2",
+		"unplugin-auto-import": "^0.15.3",
+		"unplugin-vue-components": "^0.24.1",
 		"vite": "^4.3.2",
+		"vite-svg-loader": "^4.0.0",
 		"vue-tsc": "^1.4.2"
 	}
 }
